Fix 404s, remove hardcoded site hostname

--- a/content/post/adventures-with-ecs.adoc
+++ b/content/post/adventures-with-ecs.adoc
@@ -491,7 +491,7 @@ IMPORTANT: It's worth restating this to be clear: any container that you want to
 
 Containers cannot access themselves by their own hostname. Under Docker Compose a container with `container_name` of `kafka` would be able to use `kafka` as a resolvable hostname (it would resolve to itself). With ECS this doesn't happen - you have to use `localhost` if you want to loopback. 
 
-This causes a problem with Kafka because https://rmoff.net/2018/08/02/kafka-listeners-explained/[per standard listeners configuration] you may have a listener configured using the *hostname* (and not localhost). 
+This causes a problem with Kafka because link:/2018/08/02/kafka-listeners-explained/[per standard listeners configuration] you may have a listener configured using the *hostname* (and not localhost). 
 
 {{< highlight shell >}}
 WARN [RequestSendThread controllerId=1] Controller 1's connection to broker kafka:29092 (id: 1 rack: null) was unsuccessful (kafka.controller.RequestSendThread)
