--- a/content/post/analysing-network-behaviour-with-ksqldb-mongodb-neo4j.adoc
+++ b/content/post/analysing-network-behaviour-with-ksqldb-mongodb-neo4j.adoc
@@ -13,7 +13,7 @@ categories:
 - Neo4j
 ---
 
-In this post I want to build on https://rmoff.net/2019/12/18/detecting-and-analysing-ssh-attacks-with-ksqldb/[my previous one] and show another use of the Syslog data that I'm capturing. Instead of looking for https://rmoff.net/2019/12/18/detecting-and-analysing-ssh-attacks-with-ksqldb/[SSH attacks], I'm going to analyse the behaviour of my networking components. 
+In this post I want to build on link:/2019/12/18/detecting-and-analysing-ssh-attacks-with-ksqldb/[my previous one] and show another use of the Syslog data that I'm capturing. Instead of looking for link:/2019/12/18/detecting-and-analysing-ssh-attacks-with-ksqldb/[SSH attacks], I'm going to analyse the behaviour of my networking components. 
 
 NOTE: You can find all the code to run this on https://github.com/confluentinc/demo-scene/tree/master/syslog[GitHub].
 
