--- a/content/post/changing-the-logging-level-for-kafka-connect-dynamically.adoc
+++ b/content/post/changing-the-logging-level-for-kafka-connect-dynamically.adoc
@@ -14,7 +14,7 @@ Logs are magical things. They tell us what an application is doing—or not doin
 
 By default, Kafka Connect will write logs at `INFO` and above. So when it starts up, the settings that it's using, and any `WARN` or `ERROR` messages along the way - a missing configuration, a broken connector, and so on. If you want to peer under the covers of what's happening, perhaps in a given connector, you'd want to see `DEBUG` or even `TRACE` messages too. 
 
-Until Apache Kafka 2.4 it was necessary to bring down the Kafka Connect worker, https://rmoff.net/post/kafka-connect-change-log-level-and-write-log-to-file/[change the log configuration file], and restart the worker. There are a few problems with this approach: 
+Until Apache Kafka 2.4 it was necessary to bring down the Kafka Connect worker, link:/2019/01/29/kafka-connect-change-log-level-and-write-log-to-file/[change the log configuration file], and restart the worker. There are a few problems with this approach: 
 
 * Where's the log configuration file? It can be fiddly to find, especially if you're not regularly working with it
 * If you're troubleshooting a connector with an issue that's intermittent, restarting the worker may clear the problem, so you lose the opportunity to see the more detailed log
