--- a/content/post/converting-asciidoc-to-google-doc-and-ms-word.adoc
+++ b/content/post/converting-asciidoc-to-google-doc-and-ms-word.adoc
@@ -15,7 +15,7 @@ categories:
 _Updated 16 April 2020 to cover formatting tricks & add import to Google Docs info_
 
 Short and sweet this one. I’ve written in the past how
-https://rmoff.net/2017/09/12/what-is-markdown-and-why-is-it-awesome/[I
+link:/2017/09/12/what-is-markdown-and-why-is-it-awesome/[I
 love Markdown] but I’ve actually moved on from that and now firmly throw
 my hat in the http://www.methods.co.nz/asciidoc/[AsciiDoc] ring. I’ll
 write another post another time explaining why in more detail, but in
