--- a/content/post/copy-mongodb-from-unifi-to-local-instance.adoc
+++ b/content/post/copy-mongodb-from-unifi-to-local-instance.adoc
@@ -11,7 +11,7 @@ categories:
 - hacks
 ---
 
-This is revisiting https://rmoff.net/2018/03/27/cloning-ubiquitis-mongodb-instance-to-a-separate-server/[the blog I wrote a while back], which showed using `mongodump` and `mongorestore` to copy a MongoDB database from one machine (a Unifi CloudKey) to another. This time instead of a manual lift and shift, I wanted a simple way to automate the update of the target with changes made on the source. 
+This is revisiting link:/2018/03/27/cloning-ubiquitis-mongodb-instance-to-a-separate-server/[the blog I wrote a while back], which showed using `mongodump` and `mongorestore` to copy a MongoDB database from one machine (a Unifi CloudKey) to another. This time instead of a manual lift and shift, I wanted a simple way to automate the update of the target with changes made on the source. 
 
 The source is as before, https://www.ui.com/unifi/unifi-cloud-key/[Unifi's CloudKey], which runs MongoDB to store its data about the network - devices, access points, events, and so on. 
 
