--- a/content/post/copying_data_kafkacat.adoc
+++ b/content/post/copying_data_kafkacat.adoc
@@ -10,7 +10,7 @@ categories:
 
 == kafkacat gives you Kafka super powers 😎
 
-I've https://rmoff.net/categories/kafkacat/[written before] about https://github.com/edenhill/kafkacat[kafkacat] and what a great tool it is for doing lots of useful things as a developer with Kafka. I used it too in https://talks.rmoff.net/8Oruwt/on-track-with-apache-kafka-building-a-streaming-etl-solution-with-rail-data#s9tMEWG[a recent demo] that I built in which data needed manipulating in a way that I couldn't easily elsewhere. Today I want share a very simple but powerful use for kafkacat as both a consumer and producer: copying data from one Kafka cluster to another. In this instance it's getting data from https://confluent.cloud/[Confluent Cloud] down to a local cluster. 
+I've link:/categories/kafkacat/[written before] about https://github.com/edenhill/kafkacat[kafkacat] and what a great tool it is for doing lots of useful things as a developer with Kafka. I used it too in https://talks.rmoff.net/8Oruwt/on-track-with-apache-kafka-building-a-streaming-etl-solution-with-rail-data#s9tMEWG[a recent demo] that I built in which data needed manipulating in a way that I couldn't easily elsewhere. Today I want share a very simple but powerful use for kafkacat as both a consumer and producer: copying data from one Kafka cluster to another. In this instance it's getting data from https://confluent.cloud/[Confluent Cloud] down to a local cluster. 
 
 <!--more-->
 
@@ -87,7 +87,7 @@ and if we run a second instance of it with the same consumer group id both rebal
 
 == Copying data from Confluent Cloud to a local Kafka cluster
 
-NOTE: https://rmoff.net/2020/04/20/using-confluent-cloud-when-there-is-no-cloud-or-internet/[See here] for how to do this properly, using Confluent's Replicator tool. 
+NOTE: link:/2020/04/20/using-confluent-cloud-when-there-is-no-cloud-or-internet/[See here] for how to do this properly, using Confluent's Replicator tool. 
 
 Now let's add Confluent Cloud into the mix—or any other secured Kafka cluster for that matter. We just need a few extra parameters in our call : 
 
