--- a/content/post/csv-to-ccloud.adoc
+++ b/content/post/csv-to-ccloud.adoc
@@ -24,7 +24,7 @@ Here I'll show how to use it to stream CSV data into a topic in https://www.conf
 <!--more-->
 
 
-1. Run your Kafka Connect worker. Whilst https://www.confluent.io/confluent-cloud/tryfree?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_csv-to-ccloud.adoc&utm_term=rmoff-devx[Confluent Cloud] offers many different https://docs.confluent.io/cloud/current/connectors/index.html?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_csv-to-ccloud.adoc&utm_term=rmoff-devx[managed connectors] FilePulse isn't yet available on it so you'll need to https://rmoff.net/2021/01/11/running-a-self-managed-kafka-connect-worker-for-confluent-cloud/[run your own Kafka Connect worker connecting to Confluent Cloud] which is what I did here 
+1. Run your Kafka Connect worker. Whilst https://www.confluent.io/confluent-cloud/tryfree?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_csv-to-ccloud.adoc&utm_term=rmoff-devx[Confluent Cloud] offers many different https://docs.confluent.io/cloud/current/connectors/index.html?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_csv-to-ccloud.adoc&utm_term=rmoff-devx[managed connectors] FilePulse isn't yet available on it so you'll need to link:/2021/01/11/running-a-self-managed-kafka-connect-worker-for-confluent-cloud/[run your own Kafka Connect worker connecting to Confluent Cloud] which is what I did here 
 
 2. You need to https://docs.confluent.io/cloud/current/client-apps/topics/manage.html#create-a-topic?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_csv-to-ccloud.adoc&utm_term=rmoff-devx[pre-create the topic(s)] to which the connector is going to write, *and also* the internal reporting topic that the connector uses. 
 +
