--- a/content/post/deploy-ksqldb.adoc
+++ b/content/post/deploy-ksqldb.adoc
@@ -105,7 +105,7 @@ There's a ton to improve here. For example
 
 ## Automagically deploying streams and table to Confluent Cloud
 
-The above scripts can be tailored to work with Confluent Cloud too. Make sure you set the necessary environment variables first. See https://rmoff.net/2021/03/24/connecting-to-managed-ksqldb-in-confluent-cloud-with-rest-and-ksqldb-cli/#_creating_the_ksqldb_api_key[this article on how to obtain the ksqlDB API key pair]
+The above scripts can be tailored to work with Confluent Cloud too. Make sure you set the necessary environment variables first. See link:/2021/03/24/connecting-to-managed-ksqldb-in-confluent-cloud-with-rest-and-ksqldb-cli/#_creating_the_ksqldb_api_key[this article on how to obtain the ksqlDB API key pair]
 
 * `CCLOUD_KSQL_ENDPOINT`
 * `CCLOUD_KSQL_API_KEY`
