--- a/content/post/how-to-win-[or-at-least-not-suck]-at-the-conference-abstract-submission-game.adoc
+++ b/content/post/how-to-win-[or-at-least-not-suck]-at-the-conference-abstract-submission-game.adoc
@@ -11,7 +11,7 @@ categories:
 - conferences
 ---
 
-Just over a year ago, I put together the crudely-titled https://rmoff.net/2018/12/19/quick-thoughts-on-not-writing-a-crap-abstract/["Quick Thoughts on Not Writing a Crap Abstract"] after reviewing a few dozen conference abstracts. This time around I've had the honour of being on a conference programme committee and with it the pleasure of reading 250+ abstracts—from which I have some more snarky words of wisdom to impart on the matter. 
+Just over a year ago, I put together the crudely-titled link:/2018/12/19/quick-thoughts-on-not-writing-a-crap-abstract/["Quick Thoughts on Not Writing a Crap Abstract"] after reviewing a few dozen conference abstracts. This time around I've had the honour of being on a conference programme committee and with it the pleasure of reading 250+ abstracts—from which I have some more snarky words of wisdom to impart on the matter. 
 
 == Remind me…how does this conference game work?
 
