--- a/content/post/influxdb-kafka.adoc
+++ b/content/post/influxdb-kafka.adoc
@@ -31,7 +31,7 @@ You can find a Docker Compose that will spin up this whole stack for you https:/
 ====
 A sharp edge to watch out for is that the InfluxDB connector relies on there being a *schema* in your data. You cannot just throw some JSON at it and hope that it will _just work_. 
 
-Learn more about https://rmoff.net/2020/01/22/kafka-connect-and-schemas/[schemas in Kafka Connect here].
+Learn more about link:/2020/01/22/kafka-connect-and-schemas/[schemas in Kafka Connect here].
 ====
 
 If this is your JSON payload
@@ -68,7 +68,7 @@ Then you'll need to wrap it in an envelope with a schema thus:
 }
 {{< /highlight >}}
 
-TIP: If you don't have the option of adding this schema to the producer writing the data, there is https://rmoff.net/2020/01/22/kafka-connect-and-schemas/[a hacky way that you can embed your payload in a schema using kafkacat].
+TIP: If you don't have the option of adding this schema to the producer writing the data, there is link:/2020/01/22/kafka-connect-and-schemas/[a hacky way that you can embed your payload in a schema using kafkacat].
 
 Now create the connector. 
 
@@ -190,7 +190,7 @@ sink  |  sink_influx_json_01  |  RUNNING  |  RUNNING  |  io.confluent.influxdb.I
 
 If the task is `FAILED` you'll need to dive into the Kafka Connect worker log to find the reason. Even if it's `RUNNING` you'll need the Kafka Connect worker log for troubleshooting more subtle problems. 
 
-If you're using Confluent Platform 5.4 (or Apache Kafka 2.4) you can use the new https://rmoff.net/2020/01/16/changing-the-logging-level-for-kafka-connect-dynamically/[dynamic logging capabilities in Kafka Connect] to bump up the logging just for the InfluxDB connector without being overwhelmed by tons of other `TRACE` data: 
+If you're using Confluent Platform 5.4 (or Apache Kafka 2.4) you can use the new link:/2020/01/16/changing-the-logging-level-for-kafka-connect-dynamically/[dynamic logging capabilities in Kafka Connect] to bump up the logging just for the InfluxDB connector without being overwhelmed by tons of other `TRACE` data: 
 
 {{< highlight shell >}}
 curl -s -X PUT http://localhost:8083/admin/loggers/io.confluent.influxdb \
@@ -215,5 +215,5 @@ put() - Processing field 'cpu1':INT32:'null' (io.confluent.influxdb.sink.InfluxD
 == Resources
 
 * Read more about https://www.confluent.io/blog/kafka-connect-deep-dive-converters-serialization-explained/[Kafka and serialisation/converters]
-* An example of the https://rmoff.net/2020/01/21/monitoring-sonos-with-ksqldb-influxdb-and-grafana/[InfluxDB connector in action]
+* An example of the link:/2020/01/21/monitoring-sonos-with-ksqldb-influxdb-and-grafana/[InfluxDB connector in action]
 * Learn more about https://rmoff.dev/crunch19-zero-to-hero-kafka-connect[Kafka Connect]
