--- a/content/post/kafka-connect-and-elasticsearch-7.adoc
+++ b/content/post/kafka-connect-and-elasticsearch-7.adoc
@@ -246,9 +246,9 @@ NOTE: Kafka Connect has *two* deserialisers: the *key* and the *value*. It is no
 org.apache.kafka.connect.errors.DataException: Cannot infer mapping without schema.
 ----
 
-* Cause: If you have set `schema.ignore=false` then the connector will create the mapping in the target index for you, based on the schema of your data. _BUT_, for it to obtain the schema, there has to be a schema! Which means either using Avro, or using https://rmoff.net/2017/09/06/kafka-connect-jsondeserializer-with-schemas.enable-requires-schema-and-payload-fields/[JSON with the schema-embedded] and the connector's converter configured to expect it.
+* Cause: If you have set `schema.ignore=false` then the connector will create the mapping in the target index for you, based on the schema of your data. _BUT_, for it to obtain the schema, there has to be a schema! Which means either using Avro, or using link:/2017/09/06/kafka-connect-jsondeserializer-with-schemas.enable-requires-schema-and-payload-fields/[JSON with the schema-embedded] and the connector's converter configured to expect it.
 
-* Solution: Use Avro! It will save you tears and time and money. If you can't change how you produce the data, consider using KSQL to reserialise the topic into Avro. Or, write JSON in the https://rmoff.net/2017/09/06/kafka-connect-jsondeserializer-with-schemas.enable-requires-schema-and-payload-fields/[required structure] and set `value.converter.schemas.enable=true`.
+* Solution: Use Avro! It will save you tears and time and money. If you can't change how you produce the data, consider using KSQL to reserialise the topic into Avro. Or, write JSON in the link:/2017/09/06/kafka-connect-jsondeserializer-with-schemas.enable-requires-schema-and-payload-fields/[required structure] and set `value.converter.schemas.enable=true`.
 
 === JsonConverter with schemas.enable requires "schema" and "payload" fields
 
@@ -259,7 +259,7 @@ org.apache.kafka.connect.errors.DataException: Cannot infer mapping without sche
 Caused by: org.apache.kafka.connect.errors.DataException: JsonConverter with schemas.enable requires "schema" and "payload" fields and may not contain additional fields. If you are trying to deserialize plain JSON data, set schemas.enable=false in your converter configuration.
 ----
 
-* Cause: You've set `schemas.enable=true` for your converter, but the JSON is not in the correct structure. See https://rmoff.net/2017/09/06/kafka-connect-jsondeserializer-with-schemas.enable-requires-schema-and-payload-fields/[here for details]. 
+* Cause: You've set `schemas.enable=true` for your converter, but the JSON is not in the correct structure. See link:/2017/09/06/kafka-connect-jsondeserializer-with-schemas.enable-requires-schema-and-payload-fields/[here for details]. 
 
 * Solution: Depending on what you're trying to do either (a) use Avro, (b) produce your JSON with the schema/payload in the correct structure (c) set `value.converter.schemas.enable=false` (if you don't care about the schema and want to set `schema.ignore=true` for the Elasticsearch connector).
 
