--- a/content/post/kafka-connect-request-timed-out.adoc
+++ b/content/post/kafka-connect-request-timed-out.adoc
@@ -31,7 +31,7 @@ But, no error in the Kafka Connect worker log (at `INFO` level anyway). Most puz
 […]
 {{< /highlight >}}
 
-Presumably since Kafka Connect uses the offsets topic for its https://rmoff.net/2019/11/22/common-mistakes-made-when-configuring-multiple-kafka-connect-workers/[own internal load balancing] the absence of it caused Kafka Connect to not be able to create a connector. 
+Presumably since Kafka Connect uses the offsets topic for its link:/2019/11/22/common-mistakes-made-when-configuring-multiple-kafka-connect-workers/[own internal load balancing] the absence of it caused Kafka Connect to not be able to create a connector. 
 
 The solution? Configure Kafka correctly :) Since I was using Docker Compose for my cluster I set: 
 
