--- a/content/post/kc-worker-gcp.adoc
+++ b/content/post/kc-worker-gcp.adoc
@@ -207,7 +207,7 @@ One other point to note is that the worker uses Kafka itself to store state incl
 * `CONNECT_OFFSET_STORAGE_TOPIC`
 * `CONNECT_STATUS_STORAGE_TOPIC`
 
-If you're [re]creating workers make sure that you don't have a clash on these topics - use a unique number appended to the end, or https://rmoff.net/2019/11/12/running-dockerised-kafka-connect-worker-on-gcp/[as I did here] use the epoch as part of the unique name.
+If you're [re]creating workers make sure that you don't have a clash on these topics - use a unique number appended to the end, or link:/2019/11/12/running-dockerised-kafka-connect-worker-on-gcp/[as I did here] use the epoch as part of the unique name.
 
 == Deploying a Docker image to Google Compute Engine (GCE) / Google Cloud Platform (GCP)
 
@@ -218,7 +218,7 @@ _This it is 💯 a Proof-of-Concept (i.e. not blessed by Confluent in any way as
 `It Works On My Machine [well, Google's]™`.
 ====
 
-So taking the above Docker Compose definition, we can then use GCE's feature to run https://cloud.google.com/compute/docs/containers[Containers on Compute Engine] to provision this directly on GCE. For AWS see the approach that I wrote about https://rmoff.net/2020/02/13/adventures-in-the-cloud-part-94-ecs/[here]. 
+So taking the above Docker Compose definition, we can then use GCE's feature to run https://cloud.google.com/compute/docs/containers[Containers on Compute Engine] to provision this directly on GCE. For AWS see the approach that I wrote about link:/2020/02/13/adventures-in-the-cloud-part-94-ecs/[here]. 
 
 To launch a container on GCE either use the Web UI, or the https://cloud.google.com/sdk/gcloud/reference/compute/instances/create-with-container?hl=en[`gcloud` commandline]. The first part of it is simple enough - we name the VM holding the container, we specify the image to use, and so on:
 
