--- a/content/post/monitoring-kafka-ingest.adoc
+++ b/content/post/monitoring-kafka-ingest.adoc
@@ -10,7 +10,7 @@ categories:
 - Monitoring
 ---
 
-I've been poking around recently with https://rmoff.net/2020/03/11/streaming-wi-fi-trace-data-from-raspberry-pi-to-apache-kafka-with-confluent-cloud/[capturing Wi-Fi packet data] and streaming it into Apache Kafka, from where I'm processing and analysing it. Kafka itself is rock-solid - because I'm using https://confluent.cloud/signup[☁️Confluent Cloud] and someone else worries about provisioning it, scaling it, and keeping it running for me. But whilst Kafka works just great, my side of the setup—`tshark` running on a Raspberry Pi—is less than stable. For whatever reason it sometimes stalls and I have to restart the Raspberry Pi and restart the capture process. 
+I've been poking around recently with link:/2020/03/11/streaming-wi-fi-trace-data-from-raspberry-pi-to-apache-kafka-with-confluent-cloud/[capturing Wi-Fi packet data] and streaming it into Apache Kafka, from where I'm processing and analysing it. Kafka itself is rock-solid - because I'm using https://confluent.cloud/signup[☁️Confluent Cloud] and someone else worries about provisioning it, scaling it, and keeping it running for me. But whilst Kafka works just great, my side of the setup—`tshark` running on a Raspberry Pi—is less than stable. For whatever reason it sometimes stalls and I have to restart the Raspberry Pi and restart the capture process. 
 
 <!--more-->
 
