--- a/content/post/moving-my-blog-to-hugo.adoc
+++ b/content/post/moving-my-blog-to-hugo.adoc
@@ -14,7 +14,7 @@ I've been blogging for quite a few years now, starting on Blogger, soon onto htt
 
 I ran Ghost self-hosted on AWS EC2, and this was the start of this particular story. Whilst 20 years ago, even 10 years ago, I'd quite happily spend an evening immersed in a hack project to get something working, times are different now. With a wife and two kids—and a fair bit of travel for work—the time I have at home I don't want to be spending on _getting shit to work_. And therein lies the beauty of PaaS. Never mind cloud-bollocks or what the acronyms stand for—in essence you write your blog, and someone else worries about all the rest of it. SSL certificate expired? Not my problem. Ghost needs upgrading? Not my problem. Whereas if you self-host…_totally_ your problem. 
 
-In addition, paying for my AWS costs out of my pocket started to grate just a little. A few bucks here and there kinda add up over the course of a couple of years. Nothing major, but enough to make me pause and look around. The final itch I had was Markdown. Now https://rmoff.net/tags/markdown/[I do like Markdown], but a little less than I used to—and that's because I found Asciidoc. Asciidoc finishes what Markdown starts. All the slightly limited functionality in Markdown once you get beyond `*bold*` and `_italic_`, asciidoc swoops in and gives you in spades. And as much as I liked Ghost, it doesn't support Asciidoc. 
+In addition, paying for my AWS costs out of my pocket started to grate just a little. A few bucks here and there kinda add up over the course of a couple of years. Nothing major, but enough to make me pause and look around. The final itch I had was Markdown. Now link:/categories/markdown/[I do like Markdown], but a little less than I used to—and that's because I found Asciidoc. Asciidoc finishes what Markdown starts. All the slightly limited functionality in Markdown once you get beyond `*bold*` and `_italic_`, asciidoc swoops in and gives you in spades. And as much as I liked Ghost, it doesn't support Asciidoc. 
 
 == Enter Hugo
 
@@ -74,7 +74,7 @@ This was pretty easy:
 ./ghostToHugo -p ~/git/rmoff-blog/ --dateformat "2006-01-02 15:04:05" ~/Downloads/rmoffs-random-ramblings.ghost.2018-12-15.json
 ----
 3. Download the `content` folder from Ghost and move the images folder to `static` in your Hugo deployment. For me this was sufficient for all the paths to match up and all existing posts to retain their images
-4. Ghost uses `tag` for its tag URLs (e.g. `https://rmoff.net/tag/goldengate/`), whereas Hugo uses `tags`. You can change your config to match this (`tag: tags` -> `tag: tag`): 
+4. Ghost uses `tag` for its tag URLs (e.g. `link:/tag/goldengate/`), whereas Hugo uses `tags`. You can change your config to match this (`tag: tags` -> `tag: tag`): 
 +
 [source,yaml]
 ----
@@ -124,6 +124,6 @@ Setting this up is as simple as pushing code to a github repo. It even provides 
 
 == Comments
 
-I used Disqus for comments on my Ghost blog, but got very few really, and those I did half were asking for help and would be better posted on StackOverflow or elsewhere. I https://rmoff.net/2018/12/12/streaming-data-from-oracle-into-kafka-december-2018/[wrote an article recently] in which I invited comments and discussion in the comments facility; I got zero there, and a good half dozen on Twitter, LinkedIn, and email. 
+I used Disqus for comments on my Ghost blog, but got very few really, and those I did half were asking for help and would be better posted on StackOverflow or elsewhere. I link:/2018/12/12/streaming-data-from-oracle-into-kafka-december-2018/[wrote an article recently] in which I invited comments and discussion in the comments facility; I got zero there, and a good half dozen on Twitter, LinkedIn, and email. 
 
 My conclusion is that comments are not really that useful nowadays; the social networks have pretty much replaced them—and so I've not bothered to migrate them over here. I _think_ that they do actually work out of the box with Hugo and Disqus, but the theme I'm using doesn't support them and that doesn't bother me. It just makes for a cleaner site. 
