--- a/content/post/preparing-a-new-talk.adoc
+++ b/content/post/preparing-a-new-talk.adoc
@@ -100,7 +100,7 @@ Today I want to finish the talk so that I can take tomorrow off with the family.
 
 Did **Test Run #5 and #6** (beginning and end of the day)
 
-Spent all day preparing diagrams. A chunk of the talk is about concepts and patterns, and need diagrams to communicate clearly. I sketch these on paper (to avoid distraction of 'implementation'  on the iPad) and then https://rmoff.net/2018/12/10/so-how-do-you-make-those-cool-diagrams/[transfer to iPad after].
+Spent all day preparing diagrams. A chunk of the talk is about concepts and patterns, and need diagrams to communicate clearly. I sketch these on paper (to avoid distraction of 'implementation'  on the iPad) and then link:/2018/12/10/so-how-do-you-make-those-cool-diagrams/[transfer to iPad after].
 
 image::/images/2019/03/IMG_0200.JPG[]
 
