--- a/content/post/quick-thoughts-on-not-writing-a-crap-abstract.adoc
+++ b/content/post/quick-thoughts-on-not-writing-a-crap-abstract.adoc
@@ -24,7 +24,7 @@ This is all just IMHO, and I would strongly caveat it that I've never been on a 
 ---
 
 
-* See also https://rmoff.net/2016/05/05/collection-of-articles-on-how-to-write-a-good-conference-abstract/[this list of good blogs with abstract writing advice].
+* See also link:/2016/05/05/collection-of-articles-on-how-to-write-a-good-conference-abstract/[this list of good blogs with abstract writing advice].
 
 * I'm always open to helping review draft abstracts; if you'd like me to look at yours put it in a Google Doc with review permissions and send it over to me. 
 
