--- a/content/post/reading-kafka-connect-offsets-via-the-rest-proxy.adoc
+++ b/content/post/reading-kafka-connect-offsets-via-the-rest-proxy.adoc
@@ -25,7 +25,7 @@ $ kafkacat -b localhost:9092 -t docker-kafka-connect-offsets -C -K:
 ["source-debezium-orders-00",{"server":"asgard"}]:{"ts_sec":1556791017,"file":"mysql-bin.000003","pos":9041,"row":1,"server_id":223344,"event":2}
 {{< /highlight >}}
 
-You may want to access this information over HTTP though. Here's how, using the https://docs.confluent.io/current/kafka-rest/index.html[Confluent REST Proxy]. For more cheat-sheet of the REST proxy https://rmoff.net/2019/03/08/using-httpie-with-the-kafka-rest-proxy/[see here]. 
+You may want to access this information over HTTP though. Here's how, using the https://docs.confluent.io/current/kafka-rest/index.html[Confluent REST Proxy]. For more cheat-sheet of the REST proxy link:/2019/03/08/using-httpie-with-the-kafka-rest-proxy/[see here]. 
 
 * Create a consumer
 +
