--- a/content/post/rpi-wifi.adoc
+++ b/content/post/rpi-wifi.adoc
@@ -14,7 +14,7 @@ categories:
 
 Wi-fi is now ubiquitous in most populated areas, and the way the devices communicate leaves a lot of 'digital exhaust'. Usually a computer will have a Wi-Fi device that's configured to connect to a given network, but often these devices can be configured instead to pick up the background Wi-Fi chatter of surrounding devices. 
 
-There are good reasons—and bad—for doing this. Just like taking apart equipment to understand how it works teaches us things, so being able to https://rmoff.net/2019/11/29/using-tcpdump-with-docker/[dissect and examine protocol traffic] lets us learn about this. However, by collecting this type of traffic it can be possible to track and analyse behaviour in ways that we may or may not feel comfortable with. https://tfl.gov.uk/corporate/privacy-and-cookies/wi-fi-data-collection[Improving public transport]? Sure. https://www.theguardian.com/technology/datablog/2014/jan/10/how-tracking-customers-in-store-will-soon-be-the-norm[Tracking shopper behaviour]? Meh, less sure.
+There are good reasons—and bad—for doing this. Just like taking apart equipment to understand how it works teaches us things, so being able to link:/2019/11/29/using-tcpdump-with-docker/[dissect and examine protocol traffic] lets us learn about this. However, by collecting this type of traffic it can be possible to track and analyse behaviour in ways that we may or may not feel comfortable with. https://tfl.gov.uk/corporate/privacy-and-cookies/wi-fi-data-collection[Improving public transport]? Sure. https://www.theguardian.com/technology/datablog/2014/jan/10/how-tracking-customers-in-store-will-soon-be-the-norm[Tracking shopper behaviour]? Meh, less sure.
 
 So, here's how to do it, and go ahead and make sure you're doing it for the right reasons. A plague o' your house if you don't!
 
