--- a/content/post/smt12_community.adoc
+++ b/content/post/smt12_community.adoc
@@ -189,7 +189,7 @@ You can see the message after it's been processed by the transform(s) in the Kaf
 [2020-12-18 00:29:59,651] INFO [sink-simulator-day12-02|task-0] record.value=Struct{units=39,product=Delirium Tremens,amount=32.60,txn_date=Wed Dec 16 07:27:19 GMT 2020,source=SYS01,processingTS=Fri Dec 18 00:29:59 GMT 2020} (com.github.jcustenborder.kafka.connect.simulator.SimulatorSinkTask:50)
 ----
 
-You can also get the Kafka Connect runtime to log `TRACE` messages that show the source messages before a transformation (c.f. https://rmoff.net/2020/01/16/changing-the-logging-level-for-kafka-connect-dynamically/[Changing the Logging Level for Kafka Connect Dynamically]): 
+You can also get the Kafka Connect runtime to log `TRACE` messages that show the source messages before a transformation (c.f. link:/2020/01/16/changing-the-logging-level-for-kafka-connect-dynamically/[Changing the Logging Level for Kafka Connect Dynamically]): 
 
 [source,bash]
 ----
