--- a/content/post/streaming-data-from-sql-server-to-kafka-to-snowflake.adoc
+++ b/content/post/streaming-data-from-sql-server-to-kafka-to-snowflake.adoc
@@ -59,7 +59,7 @@ $ curl -s localhost:8083/connector-plugins|jq '.[].class'|grep debezium
 "io.debezium.connector.sqlserver.SqlServerConnector"
 {{< /highlight >}}
 
-Debezium will write to a topic with all of the data from SQL Server. Debezium also needs its own topic for tracking the DDL—and we need to pre-create both these topics (see https://rmoff.net/2019/10/16/using-kafka-connect-and-debezium-with-confluent-cloud/[this article] for more details): 
+Debezium will write to a topic with all of the data from SQL Server. Debezium also needs its own topic for tracking the DDL—and we need to pre-create both these topics (see link:/2019/10/16/using-kafka-connect-and-debezium-with-confluent-cloud/[this article] for more details): 
 
 {{< highlight shell >}}
 $ ccloud kafka topic create --partitions 1 dbz_dbhistory.mssql.asgard-01
@@ -241,7 +241,7 @@ Now set up your connector configuration. A few important settings of note:
 * `value.converter` - Snowflake provide their own converters. Use either:
 ** `com.snowflake.kafka.connector.records.SnowflakeAvroConverter` 
 ** `com.snowflake.kafka.connector.records.SnowflakeJsonConverter`
-* *Authentication / sensitive information* I've https://rmoff.net/2019/05/24/putting-kafka-connect-passwords-in-a-separate-file-/-externalising-secrets/[embedded these in a separate file] (`.env`) that's loaded by the connector directly: 
+* *Authentication / sensitive information* I've link:/2019/05/24/putting-kafka-connect-passwords-in-a-separate-file-/-externalising-secrets/[embedded these in a separate file] (`.env`) that's loaded by the connector directly: 
 ** `snowflake.url.name`
 ** `snowflake.user.name` - we created the user `kafka` for this above
 ** `snowflake.private.key` - this is the key that we extracted in the step above
