--- a/content/post/using-ccloud-with-local-tools.adoc
+++ b/content/post/using-ccloud-with-local-tools.adoc
@@ -203,7 +203,7 @@ Here's a test message, sent at Mon 20 Apr 2020 14:14:09 BST
 
 == Storing credentials safely
 
-In the example above we passed the credentials for Confluent Cloud just as environment variables to Kafka Connect, which is not great from a security point of view. Instead we could use https://rmoff.net/2019/05/24/putting-kafka-connect-passwords-in-a-separate-file-/-externalising-secrets/[external secrets]. Note that the Replicator docker container has the necessary `config.providers` settings to enable this, and that we've mounted out local `.env` file into the container. 
+In the example above we passed the credentials for Confluent Cloud just as environment variables to Kafka Connect, which is not great from a security point of view. Instead we could use link:/2019/05/24/putting-kafka-connect-passwords-in-a-separate-file-/-externalising-secrets/[external secrets]. Note that the Replicator docker container has the necessary `config.providers` settings to enable this, and that we've mounted out local `.env` file into the container. 
 
 {{< highlight yaml >}}
 …
