--- a/content/post/using-tcpdump-with-docker.adoc
+++ b/content/post/using-tcpdump-with-docker.adoc
@@ -73,7 +73,7 @@ What we can see here is our container (https://ksqldb.io[ksqlDB server]) talking
 
 * `kafka` is the broker's hostname
 * `ksqldb-twitter_default` the name of the Docker network (that in this case Docker Compose has created)
-* `29092` the https://rmoff.net/2018/08/02/kafka-listeners-explained/[Kafka broker's listener port]. 
+* `29092` the link:/2018/08/02/kafka-listeners-explained/[Kafka broker's listener port]. 
 
 I'm not interested in this traffic, so instead of using the default runtime arguments for `tcpdump` that were defined in the `CMD` section when we built the Docker image above, we can override it: 
 
