--- a/content/post/vienna-munich-sleeper-train.adoc
+++ b/content/post/vienna-munich-sleeper-train.adoc
@@ -8,7 +8,7 @@ categories:
 - Travel
 ---
 
-This week I was scheduled in to a couple of meetups, in Vienna and Munich. Flying is an inevitable part of travel since I also happen to https://rmoff.net/2019/02/08/travelling-for-work-with-kids-at-home/[like being home seeing my family] and airplanes are usually the quickest way to make this happen. I don't particularly enjoy flying, and there's the environmental impact of it too—so when I realised that Vienna and Munich are _relatively_ close to each other I looked at getting the train. In the UK trains are generally a few hours, and certainly not overnight (bar a couple of exceptions), so the novelty of getting a sleeper train appealed. 
+This week I was scheduled in to a couple of meetups, in Vienna and Munich. Flying is an inevitable part of travel since I also happen to link:/2019/02/09/travelling-for-work-with-kids-at-home/[like being home seeing my family] and airplanes are usually the quickest way to make this happen. I don't particularly enjoy flying, and there's the environmental impact of it too—so when I realised that Vienna and Munich are _relatively_ close to each other I looked at getting the train. In the UK trains are generally a few hours, and certainly not overnight (bar a couple of exceptions), so the novelty of getting a sleeper train appealed. 
 
 Would I do it again? Maybe. Here are my rough notes, to help others and to refresh my memory when I need it: 
 
