--- a/content/post/jdbc-sink-primary-keys.adoc
+++ b/content/post/jdbc-sink-primary-keys.adoc
@@ -573,7 +573,7 @@ We couldn't use the delete option in the examples above in which the primary key
 
 *This is why keys in Kafka messages make so much sense*. Even if you can cram all your data into the value of the message, and you don't need partition locality for particular instances of an entity (such as all customers on a given partition, which would drive the need to use keys)—simply the fact that your data has a logical key means that using a the Kafka message key is a good idea. If you're using ksqlDB it added support for structured keys and supporting serialization formats in version 0.15 so there's no excuse not to use them :) 
 
-So, we now have the primary key in the key of the Kafka message, as we saw above. Let's add a tombstone message to our topic, here using the `-Z` option of kafkacat. You can https://rmoff.net/2020/11/03/kafka-connect-ksqldb-and-kafka-tombstone-messages/[write NULLs using ksqlDB] but this way is quicker for our purposes.
+So, we now have the primary key in the key of the Kafka message, as we saw above. Let's add a tombstone message to our topic, here using the `-Z` option of kafkacat. You can link:/2020/11/03/kafka-connect-ksqldb-and-kafka-tombstone-messages/[write NULLs using ksqlDB] but this way is quicker for our purposes.
 
 [source,bash]
 ----
@@ -1027,7 +1027,7 @@ Caused by: java.lang.ClassCastException: class java.util.HashMap cannot be cast 
         ... 10 more
 ----
 
-This somewhat cryptic error (`class java.util.HashMap cannot be cast to class org.apache.kafka.connect.data.Struct (java.util.HashMap is in module java.base of loader 'bootstrap'; org.apache.kafka.connect.data.Struct is in unnamed module of loader 'app')`) is basically saying that whilst it's happy now with treating the key as a primitive to load into the column that we named, https://rmoff.net/2020/01/22/kafka-connect-and-schemas/[it is expecting a struct in the value part of the message], rather than the HashMap that it got from us using `org.apache.kafka.connect.json.JsonConverter`. Since we don't have the schema itself embedded in the JSON message (so `schemas.enable=false`) then we need to apply the schema some other way. 
+This somewhat cryptic error (`class java.util.HashMap cannot be cast to class org.apache.kafka.connect.data.Struct (java.util.HashMap is in module java.base of loader 'bootstrap'; org.apache.kafka.connect.data.Struct is in unnamed module of loader 'app')`) is basically saying that whilst it's happy now with treating the key as a primitive to load into the column that we named, link:/2020/01/22/kafka-connect-and-schemas/[it is expecting a struct in the value part of the message], rather than the HashMap that it got from us using `org.apache.kafka.connect.json.JsonConverter`. Since we don't have the schema itself embedded in the JSON message (so `schemas.enable=false`) then we need to apply the schema some other way. 
 
 The best way to do this is to fix it at source: when the data is written to Kafka, make sure that it's written using a serializer that's going to store the schema and not throw it away. Good options are Avro, Protobuf, and JSON Schema.
 
@@ -1195,7 +1195,7 @@ postgres=# SELECT * FROM "FOO_08_CONVERTED" ;
 
 You can use Single Message Transform to change the target object in the database to which the data is written. By default it takes the name of the source topic. 
 
-Using the https://rmoff.net/2020/12/11/twelve-days-of-smt-day-4-regexrouter/[RegExRouter] we can change `FOO_08_CONVERTED` to `FOO_08` thus: 
+Using the link:/2020/12/11/twelve-days-of-smt-day-4-regexrouter/[RegExRouter] we can change `FOO_08_CONVERTED` to `FOO_08` thus: 
 
 [source,sql]
 ----
@@ -1300,4 +1300,4 @@ The fix is to remove the instances of `"default": null` from the schema.
 * https://rmoff.dev/zero-to-hero[From Zero to Hero with Kafka Connect]
 * https://docs.confluent.io/current/connect/kafka-connect-jdbc/sink-connector/index.html?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_jdbc-sink-primary-keys&utm_term=rmoff-devx[JDBC Sink connector docs]
 * https://hub.confluent.io?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_jdbc-sink-primary-keys&utm_term=rmoff-devx[Confluent Hub]
-* https://rmoff.net/categories/twelvedaysofsmt/[Single Message Transforms deep-dive]
+* link:/categories/twelvedaysofsmt/[Single Message Transforms deep-dive]
