--- a/content/post/kafka-connect-change-log-level-and-write-log-to-file.adoc
+++ b/content/post/kafka-connect-change-log-level-and-write-log-to-file.adoc
@@ -96,4 +96,4 @@ log4j.logger.org.I0Itec.zkclient=ERROR
 log4j.logger.org.reflections=ERROR
 ----
 
-See also https://rmoff.net/2017/06/12/configuring-kafka-connect-to-log-rest-http-messages-to-a-separate-file/[Configuring Kafka Connect to log REST HTTP messages to a separate file]
+See also link:/2017/06/12/configuring-kafka-connect-to-log-rest-http-messages-to-a-separate-file/[Configuring Kafka Connect to log REST HTTP messages to a separate file]
