--- a/content/post/mssql-debezium-ksqldb.adoc
+++ b/content/post/mssql-debezium-ksqldb.adoc
@@ -18,7 +18,7 @@ categories:
 :rouge-css: style
 :rouge-style: github
 
-Prompted by https://stackoverflow.com/questions/63946368/how-to-use-the-debezium-sql-server-connector-with-ksqldb-embedded-connect[a question on StackOverflow] I thought I'd take a quick look at setting up https://ksqldb.io[ksqlDB] to ingest CDC events from Microsoft SQL Server using https://debezium.io/[Debezium]. Some of this is based on my previous article, https://rmoff.net/2019/11/20/streaming-data-from-sql-server-to-kafka-to-snowflake-with-kafka-connect/[Streaming data from SQL Server to Kafka to Snowflake ❄️ with Kafka Connect]. 
+Prompted by https://stackoverflow.com/questions/63946368/how-to-use-the-debezium-sql-server-connector-with-ksqldb-embedded-connect[a question on StackOverflow] I thought I'd take a quick look at setting up https://ksqldb.io[ksqlDB] to ingest CDC events from Microsoft SQL Server using https://debezium.io/[Debezium]. Some of this is based on my previous article, link:/2019/11/20/streaming-data-from-sql-server-to-kafka-to-snowflake-with-kafka-connect/[Streaming data from SQL Server to Kafka to Snowflake ❄️ with Kafka Connect]. 
 
 == Setting up the Docker Compose
 
@@ -28,7 +28,7 @@ You can find the complete https://github.com/confluentinc/demo-scene/blob/master
 
 === Installing connectors in ksqlDB without Confluent Hub client
 
-I'll usually take advantage of the `command:` stanza in a Docker Compose service to do things like connector installation, https://rmoff.net/2018/12/15/docker-tips-and-tricks-with-ksql-and-kafka/[as detailed here]. In ksqlDB 0.11 the Confluent Hub client is absent so I've had to take a slightly hackier route. If you head over to https://hub.confluent.io[Confluent Hub] and download the connector you want (in this case Debezium MS SQL) you can check the network console to get the direct URL, in this case 
+I'll usually take advantage of the `command:` stanza in a Docker Compose service to do things like connector installation, link:/2018/12/15/docker-tips-and-tricks-with-ksql-and-kafka/[as detailed here]. In ksqlDB 0.11 the Confluent Hub client is absent so I've had to take a slightly hackier route. If you head over to https://hub.confluent.io[Confluent Hub] and download the connector you want (in this case Debezium MS SQL) you can check the network console to get the direct URL, in this case 
 
 [source,bash]
 ----
