--- a/README.adoc
+++ b/README.adoc
@@ -4,3 +4,7 @@ image::https://github.com/rmoff/rmoff-blog/workflows/GitHub%20Pages/badge.svg?br
 
 This is the source for https://rmoff.net, built using Hugo and hosted via GitHub pages.
 
+== Running locally
+
+`brew install asciidoctor asciidoc hugo`
+`hugo --buildDrafts server`
