Fix hardcoded hostname

--- a/content/post/kafkaconnect-hashmap-struct.adoc
+++ b/content/post/kafkaconnect-hashmap-struct.adoc
@@ -99,7 +99,7 @@ then you can just fix the configuration of your converter, by setting:
 "value.converter.schemas.enable":"true"
 {{< /highlight >}}
 
-If you get `JsonDeserializer with schemas.enable requires "schema" and "payload" fields and may not contain additional fields` check http://rmoff.net/2017/09/06/kafka-connect-jsondeserializer-with-schemas.enable-requires-schema-and-payload-fields/[this link]
+If you get `JsonDeserializer with schemas.enable requires "schema" and "payload" fields and may not contain additional fields` check link:/2017/09/06/kafka-connect-jsondeserializer-with-schemas.enable-requires-schema-and-payload-fields/[this link]
 
 But if you don't actually have a schema present, then you're going to need to declare one and make it available as part of your Kafka message - either embedded in the JSON, or using Avro (a better solution). 
 
